src/objects/Education_History__c.object
<CustomObject>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Education Histories</relationshipLabel>
        <relationshipName>Education_Histories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>UNITED STATES OF AMERICA</fullName>
                </value>
                <value>
                    <fullName>AFGHANISTAN</fullName>
                </value>
                <value>
                    <fullName>ÅLAND ISLANDS</fullName>
                </value>
                <value>
                    <fullName>ALBANIA</fullName>
                </value>
                <value>
                    <fullName>ALGERIA (al-Djazāʼir)</fullName>
                </value>
                <value>
                    <fullName>AMERICAN SAMOA</fullName>
                </value>
                <value>
                    <fullName>ANDORRA</fullName>
                </value>
                <value>
                    <fullName>ANGOLA</fullName>
                </value>
                <value>
                    <fullName>ANGUILLA</fullName>
                </value>
                <value>
                    <fullName>ANTARCTICA</fullName>
                </value>
                <value>
                    <fullName>ANTIGUA AND BARBUDA</fullName>
                </value>
                <value>
                    <fullName>ARGENTINA</fullName>
                </value>
                <value>
                    <fullName>ARMENIA</fullName>
                </value>
                <value>
                    <fullName>ARUBA</fullName>
                </value>
                <value>
                    <fullName>AUSTRALIA</fullName>
                </value>
                <value>
                    <fullName>AUSTRIA</fullName>
                </value>
                <value>
                    <fullName>AZERBAIJAN</fullName>
                </value>
                <value>
                    <fullName>BAHAMAS</fullName>
                </value>
                <value>
                    <fullName>BAHRAIN</fullName>
                </value>
                <value>
                    <fullName>BANGLADESH</fullName>
                </value>
                <value>
                    <fullName>BARBADOS</fullName>
                </value>
                <value>
                    <fullName>BELARUS</fullName>
                </value>
                <value>
                    <fullName>BELGIUM</fullName>
                </value>
                <value>
                    <fullName>BELIZE</fullName>
                </value>
                <value>
                    <fullName>BENIN</fullName>
                </value>
                <value>
                    <fullName>BERMUDA</fullName>
                </value>
                <value>
                    <fullName>BHUTAN</fullName>
                </value>
                <value>
                    <fullName>BOLIVIA</fullName>
                </value>
                <value>
                    <fullName>BONAIRE, ST. EUSTATIUS, AND SABA</fullName>
                </value>
                <value>
                    <fullName>BOSNIA AND HERZEGOVINA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Degree__c</fullName>
        <label>Degree</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Degree Earned</fullName>
                </value>
                <value>
                    <fullName>Certificate</fullName>
                </value>
                <value>
                    <fullName>Associate&apos;s Degree</fullName>
                </value>
                <value>
                    <fullName>Bachelor&apos;s Degree</fullName>
                </value>
                <value>
                    <fullName>Master&apos;s Degree</fullName>
                </value>
                <value>
                    <fullName>Doctorate</fullName>
                </value>
                <value>
                    <fullName>Other Professional Degree</fullName>
                </value>
                <value>
                    <fullName>High School Diploma or GED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Graduation_Date_mm_dd_yyyy__c</fullName>
        <label>Graduation Date mm dd yyyy</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SAIS__c</fullName>
        <label>SAIS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Name_Not_Found__c</fullName>
        <label>School Name Not Found</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>School</label>
        <referenceTo>School__c</referenceTo>
        <relationshipLabel>Education Histories</relationshipLabel>
        <relationshipName>Education_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>FM</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>GU</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MH</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Education History</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EDU - {0000}</displayFormat>
        <label>Education  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Education Histories</pluralLabel>
    <recordTypes>
        <fullName>College</fullName>
        <active>true</active>
        <label>College</label>
    </recordTypes>
    <recordTypes>
        <fullName>High_School</fullName>
        <active>true</active>
        <label>High School</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>